--- a/scripts/Model Consolidation.ipynb
+++ b/scripts/Model Consolidation.ipynb
@@ -904,51 +904,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---------------------------------------------------------------------------------------------------------------------------\n",
-    "\n",
-    "## Data import\n",
-    "---------------------------------------------------------------------------------------------------------------------------"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\nojed\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:4160: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  return super().drop(\n"
-     ]
-    }
-   ],
-   "source": [
-    "X_train_w, X_test_w, y_train_w, y_test_w = train_test_split(X_wav, y_wav, train_size=0.80, test_size=0.20, stratify=y_wav, random_state=101)\n",
-    "\n",
-    "#Get list of file names in train and test to apply split consistently on other datasets\n",
-    "filenames_in_train = list(X_train_w['filename'])\n",
-    "filenames_in_test = list(X_test_w['filename'])\n",
-    "\n",
-    "#Remove File name from features\n",
-    "X_train_w.drop('filename',axis=1,inplace=True) \n",
-    "X_test_w.drop('filename',axis=1,inplace=True)\n",
-    "\n",
-    "X_train_m = midi_train.iloc[:,np.r_[1:10,11]]\n",
-    "y_train_m = midi_train.iloc[:,np.r_[10]]\n",
-    "\n",
-    "X_train_c = comb_train.iloc[:,np.r_[0,2:177]]\n",
-    "y_train_c = comb_train.iloc[:,np.r_[177]]\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 1.2 MIDI Data Only "
    ]
   },
@@ -2042,6 +1997,706 @@
     "print('CV Scores: ', scores)\n",
     "print('CV Average and standard deviation: ', np.mean(scores), '+/-', np.std(scores))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "## Data import\n",
+    "---------------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\nojed\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:4160: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  return super().drop(\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train_w, X_test_w, y_train_w, y_test_w = train_test_split(X_wav, y_wav, train_size=0.80, test_size=0.20, stratify=y_wav, random_state=101)\n",
+    "\n",
+    "#Get list of file names in train and test to apply split consistently on other datasets\n",
+    "filenames_in_train = list(X_train_w['filename'])\n",
+    "filenames_in_test = list(X_test_w['filename'])\n",
+    "\n",
+    "#Remove File name from features\n",
+    "X_train_w.drop('filename',axis=1,inplace=True) \n",
+    "X_test_w.drop('filename',axis=1,inplace=True)\n",
+    "\n",
+    "X_train_m = midi_train.iloc[:,np.r_[1:10,11]]\n",
+    "y_train_m = midi_train.iloc[:,np.r_[10]]\n",
+    "\n",
+    "X_train_c = comb_train.iloc[:,np.r_[0,2:177]]\n",
+    "y_train_c = comb_train.iloc[:,np.r_[177]]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 Spectral (WAV) Data Only"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.1.1 Baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.1.2 PCA components"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 MIDI Data Only"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2.1 Baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.2.2 PCA components"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 Combined Data (WAV & MIDI)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.3.1 Baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.3.2 PCA components"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "## Data import\n",
+    "---------------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_w, X_test_w, y_train_w, y_test_w = train_test_split(X_wav, y_wav, train_size=0.80, test_size=0.20, stratify=y_wav, random_state=101)\n",
+    "\n",
+    "#Get list of file names in train and test to apply split consistently on other datasets\n",
+    "filenames_in_train = list(X_train_w['filename'])\n",
+    "filenames_in_test = list(X_test_w['filename'])\n",
+    "\n",
+    "#Remove File name from features\n",
+    "X_train_w.drop('filename',axis=1,inplace=True) \n",
+    "X_test_w.drop('filename',axis=1,inplace=True)\n",
+    "\n",
+    "X_train_m = midi_train.iloc[:,np.r_[1:10,11]]\n",
+    "y_train_m = midi_train.iloc[:,np.r_[10]]\n",
+    "\n",
+    "X_train_c = comb_train.iloc[:,np.r_[0,2:177]]\n",
+    "y_train_c = comb_train.iloc[:,np.r_[177]]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 Spectral (WAV) Data Only"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.1.1 Baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.1.2 PCA components"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 MIDI Data Only"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.2.1 Baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.1.2 PCA components"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3 Combined Data (WAV & MIDI)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.3.1 Baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.3.2 PCA components"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "## Data import\n",
+    "---------------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_w, X_test_w, y_train_w, y_test_w = train_test_split(X_wav, y_wav, train_size=0.80, test_size=0.20, stratify=y_wav, random_state=101)\n",
+    "\n",
+    "#Get list of file names in train and test to apply split consistently on other datasets\n",
+    "filenames_in_train = list(X_train_w['filename'])\n",
+    "filenames_in_test = list(X_test_w['filename'])\n",
+    "\n",
+    "#Remove File name from features\n",
+    "X_train_w.drop('filename',axis=1,inplace=True) \n",
+    "X_test_w.drop('filename',axis=1,inplace=True)\n",
+    "\n",
+    "X_train_m = midi_train.iloc[:,np.r_[1:10,11]]\n",
+    "y_train_m = midi_train.iloc[:,np.r_[10]]\n",
+    "\n",
+    "X_train_c = comb_train.iloc[:,np.r_[0,2:177]]\n",
+    "y_train_c = comb_train.iloc[:,np.r_[177]]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.1 Spectral (WAV) Data Only"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.1.1 Baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.1.2 PCA components"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2 MIDI Data Only"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.2.1 Baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.2.2 PCA components"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3 Combined Data (WAV & MIDI)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.3.1 Baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.3.2 PCA components"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "## Data import\n",
+    "---------------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_w, X_test_w, y_train_w, y_test_w = train_test_split(X_wav, y_wav, train_size=0.80, test_size=0.20, stratify=y_wav, random_state=101)\n",
+    "\n",
+    "#Get list of file names in train and test to apply split consistently on other datasets\n",
+    "filenames_in_train = list(X_train_w['filename'])\n",
+    "filenames_in_test = list(X_test_w['filename'])\n",
+    "\n",
+    "#Remove File name from features\n",
+    "X_train_w.drop('filename',axis=1,inplace=True) \n",
+    "X_test_w.drop('filename',axis=1,inplace=True)\n",
+    "\n",
+    "X_train_m = midi_train.iloc[:,np.r_[1:10,11]]\n",
+    "y_train_m = midi_train.iloc[:,np.r_[10]]\n",
+    "\n",
+    "X_train_c = comb_train.iloc[:,np.r_[0,2:177]]\n",
+    "y_train_c = comb_train.iloc[:,np.r_[177]]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Random Forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.1 Spectral (WAV) Data Only"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.1.1 Baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.1.2 Sampling (SMOTE), no hyperparameter tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.1.3 Sampling (SMOTE), hyperparameter tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.2 MIDI Data Only"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.2.1 Baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.2.2 Sampling (SMOTE), no hyperparameter tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.2.3 Sampling (SMOTE), hyperparameter tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.3 Combined Data (WAV & MIDI)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.3.1 Baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.3.2 Sampling (SMOTE), no hyperparameter tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.3.2 Sampling (SMOTE), hyperparameter tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "## Data import\n",
+    "---------------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_w, X_test_w, y_train_w, y_test_w = train_test_split(X_wav, y_wav, train_size=0.80, test_size=0.20, stratify=y_wav, random_state=101)\n",
+    "\n",
+    "#Get list of file names in train and test to apply split consistently on other datasets\n",
+    "filenames_in_train = list(X_train_w['filename'])\n",
+    "filenames_in_test = list(X_test_w['filename'])\n",
+    "\n",
+    "#Remove File name from features\n",
+    "X_train_w.drop('filename',axis=1,inplace=True) \n",
+    "X_test_w.drop('filename',axis=1,inplace=True)\n",
+    "\n",
+    "X_train_m = midi_train.iloc[:,np.r_[1:10,11]]\n",
+    "y_train_m = midi_train.iloc[:,np.r_[10]]\n",
+    "\n",
+    "X_train_c = comb_train.iloc[:,np.r_[0,2:177]]\n",
+    "y_train_c = comb_train.iloc[:,np.r_[177]]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. SVM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.1 Spectral (WAV) Data Only"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.1.1 Baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.1.2 Hyperparameter tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.1.3 Hyperparameter tuning, PCA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.1.4 Hyperparameter tuning, PCA, SMOTE, Min Max Scaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.1.5 Hyperparameter tuning, PCA, SMOTE, Standard Scaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.2 MIDI Data Only"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.2.1 Baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.2.2 Hyperparameter tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.2.3 SMOTE, PCA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.3 Combined Data (WAV & MIDI)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.3.1 Baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.3.2 Hyperparameter tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6.3.2 Hyperparameter tuning, PCA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------------------------------------------------------------------------------------------------\n",
+    "\n",
+    "## Data import\n",
+    "---------------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_w, X_test_w, y_train_w, y_test_w = train_test_split(X_wav, y_wav, train_size=0.80, test_size=0.20, stratify=y_wav, random_state=101)\n",
+    "\n",
+    "#Get list of file names in train and test to apply split consistently on other datasets\n",
+    "filenames_in_train = list(X_train_w['filename'])\n",
+    "filenames_in_test = list(X_test_w['filename'])\n",
+    "\n",
+    "#Remove File name from features\n",
+    "X_train_w.drop('filename',axis=1,inplace=True) \n",
+    "X_test_w.drop('filename',axis=1,inplace=True)\n",
+    "\n",
+    "X_train_m = midi_train.iloc[:,np.r_[1:10,11]]\n",
+    "y_train_m = midi_train.iloc[:,np.r_[10]]\n",
+    "\n",
+    "X_train_c = comb_train.iloc[:,np.r_[0,2:177]]\n",
+    "y_train_c = comb_train.iloc[:,np.r_[177]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Neural Network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7.1 Spectral (WAV) Data Only"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 7.1.1 Baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 7.1.2 PCA components"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7.2 MIDI Data Only"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 7.2.1 Baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 7.2.2 PCA components"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7.3 Combined Data (WAV & MIDI)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 7.3.1 Baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 7.3.2 PCA components"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
